--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
-    "@google/genai": "^1.33.0",
     "@react-three/drei": "^9.100.0",
     "@react-three/fiber": "^8.16.0",
+    "@react-three/postprocessing": "^2.16.2",
     "lucide-react": "^0.363.0",
+    "postprocessing": "^6.36.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.162.0"
@@ -22,9 +23,9 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@types/three": "^0.162.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "vite": "^6.0.5"
   }
 }
